VDR Plugin 'xineliboutput' Revision History
-------------------------------------------

????-??-??: Version 2.0.0

- Moved from CVS to GIT (see README)
- Support vdr-2.3.1
- Support for cDevice::ScaleVideo()
- Dropped support for vdr < 2.0

2013-08-20: Version 1.1.0

- Added simple touchscreen remote controller to vdr-sxfe
- Added XShape support for HUD OSD: opaque HUD OSD when no compositing manager
  (Thanks to grueni75)
- Added support for background image streams (display images or videos while playing music)
  (Thanks to Helmar Gerloni)
- Added manual ordering to playlist menu (Thanks to Marco Skambraks)
- Hide mouse cursor after 2 seconds mouse inactivity (Thanks to Gerald Dachs)
- Added support for Alt and Ctrl key modifiers to X11 keyboard remote controller.
- Added support for yaepg(hd) video window with HUD OSD (Thanks to grueni75)
- New, smoother live mode SCR sync algorithm (Thanks to Dirk Brenken)
- Scale or re-position SD subtitles on HD OSD (Thanks to Rolf Ahrenberg)
- Added an option to select subtitle OSD scaling or re-positioning
- Use xineliboutput/allowed_hosts.conf instead of svdrphosts.conf
- Implemented demuxer with mpeg-ts support
- Initial support for vdr-1.7.15
- Support for multilayer OSD
- Improved OSD scaling (OSD reacts now immediately to frame size changes)
- Replaced cIConv with VDR's cCharConv.
- Supports only for vdr-1.6.0 or later.
- Implemented build-time configuration script
- Fixed aspect ratio problems when using ffmpeg mpeg2 decoder
- H.264 updates
- Added support for .ass subtitles to media player (Thanks to zaverel)
- Added support for .smi subtitles to media player
- Added OpenGL HUD OSD support: HUD OSD without compositing / window manager
  (thanks to grueni75)
- Added tearing-free OpenGL video output support with high-quality OSD (thanks to grueni75)

2011-07-10: Version 1.0.7  (branch-1_0_x)
Backported bugfixes from CVS trunk:
- Accept short X11 display names (:0)