@@ -5,6 +5,7 @@ VDR Plugin 'xineliboutput' Revision History
 
 - Moved from CVS to GIT (see README)
 - Support vdr-2.3.1
+- Support libcec 3
 - Support for cDevice::ScaleVideo()
 - Dropped support for vdr < 2.0
 
